--- a/src/scss/vars/_overrides.scss
+++ b/src/scss/vars/_overrides.scss
@@ -1,4 +1,5 @@
 $font-family-base: "acid_grotesk", sans-serif;
+$font-family-graphik: "graphik", sans-serif;
 
 $black: #000;
 $white: #fff;
@@ -14,6 +15,8 @@ $gray-300: #6f706a;
 $beige: #fdffd0;
 $olive: #9ba91b;
 $olive1: #85921a;
+
+$linkText: #2d51ff;
 
 $theme-colors: (
   "primary": $primary,
