--- a/src/scss/components/_scroll-to-top.scss
+++ b/src/scss/components/_scroll-to-top.scss
@@ -10,6 +10,14 @@
   z-index: 99;
   opacity: 0;
   transition: all 0.2s;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  svg {
+    display: block;
+  }
 
   &:focus {
     box-shadow: none;
