--- a/src/scss/sections/_block-filter.scss
+++ b/src/scss/sections/_block-filter.scss
@@ -155,6 +155,7 @@
     form {
       flex-direction: row;
       justify-content: space-between;
+      align-items: flex-start;
       border: none;
       overflow: visible;
     }
@@ -167,6 +168,7 @@
       ul {
         padding: 0;
         display: flex;
+        flex-wrap: wrap;
 
         li {
           margin: 0 24px 0 0;
@@ -182,6 +184,10 @@
       text-align: right;
       border-bottom: none;
       flex: 0 0 auto;
+
+      .dropdown-toggle {
+        text-transform: uppercase;
+      }
     }
 
     .dropdown {
