--- a/src/scss/sections/_block-headline-text-case.scss
+++ b/src/scss/sections/_block-headline-text-case.scss
@@ -23,6 +23,23 @@
     }
   }
 
+  .animated {
+    a {
+      color: $linkText;
+      text-decoration: underline;
+      text-underline-offset: 0.1em;
+
+      .word,
+      .char {
+        display: inline !important;
+      }
+
+      &:hover {
+        text-decoration: none;
+      }
+    }
+  }
+
   @include media-breakpoint-up(xl) {
     padding: 140px 0 200px;
 
