--- a/src/scss/sections/_block-text-page.scss
+++ b/src/scss/sections/_block-text-page.scss
@@ -8,6 +8,7 @@
     margin: 0 0 60px;
     font-weight: 350;
     letter-spacing: -0.01em;
+    line-height: 1;
   }
 
   h4 {
@@ -98,6 +99,11 @@
   @include media-breakpoint-up(xl) {
     font-size: 21px;
     line-height: 1.4;
+    padding: 200px 0 120px;
+
+    h1 {
+      margin: 0 0 200px;
+    }
   }
 
   @include media-breakpoint-up(xxl) {
