--- a/src/scss/sections/_block-home-3.scss
+++ b/src/scss/sections/_block-home-3.scss
@@ -1,6 +1,8 @@
 .block-home-3 {
   overflow: hidden;
   height: auto;
+  position: relative;
+  z-index: 1200;
 
   .block-inner {
     height: auto;
