--- a/src/scss/sections/_page-header-case.scss
+++ b/src/scss/sections/_page-header-case.scss
@@ -1,5 +1,17 @@
 .page-header-case {
   height: 100vh;
+  position: relative;
+
+  .lottie {
+    position: absolute;
+    left: 50%;
+    bottom: 2vh;
+    width: 150px;
+    height: 30px;
+    transform: translateX(-50%);
+    z-index: 99;
+    opacity: 1;
+  }
 
   .block-inner {
     position: relative;
@@ -18,6 +30,10 @@
     video {
       @include img-fit;
     }
+
+    video {
+      object-position: center bottom;
+    }
   }
 
   .text {
@@ -30,7 +46,7 @@
 
     h1 {
       @include font-size(2.875rem, $h1-font-size);
-      line-height: 0.97;
+      line-height: 1;
       color: $primary;
       margin: 0 0 56px;
 
@@ -86,7 +102,7 @@
       }
 
       h1 {
-        line-height: 0.8;
+        line-height: 1;
         margin: 0 0 -0.1em;
       }
 
@@ -109,7 +125,7 @@
     .text {
       h1 {
         font-size: 9.125rem;
-        line-height: 0.9;
+        line-height: 1;
       }
     }
 
