--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -20,12 +20,13 @@ button {
   text-transform: uppercase;
   text-decoration: none;
   font-size: $btn-font-size;
-  font-weight: $btn-font-weight;
   padding: 0;
   padding-left: $btn-padding-x;
   padding-right: $btn-padding-x;
   background: none;
   border: none;
+  font-weight: 300 !important;
+  white-space: nowrap;
 
   &[disabled],
   &.disabled {
@@ -50,7 +51,7 @@ button {
     height: 100%;
     border-radius: $btn-border-radius;
     transform-origin: center;
-    transition: all 0.3s;
+    transition: all 0.15s linear;
   }
 
   .btn-label-wrap {
@@ -67,15 +68,31 @@ button {
     display: inline-block;
     line-height: 1.2;
     transition: all 0.2s;
+    padding: 0 2px;
+
+    &:before {
+      content: attr(data-text);
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate3d(-50%, -50%, 0);
+      display: block;
+      transition: all 0.15s linear;
+      height: 100%;
+      font-weight: 300;
+    }
 
     &:after {
       content: attr(data-text);
       position: absolute;
-      right: 0;
-      left: 0;
+      left: 50%;
+      top: 50%;
+      transform: translate3d(-50%, -50%, 0);
       display: block;
-      transition: all 0.5s;
+      transition: all 0.15s linear;
       height: 100%;
+      opacity: 0;
+      font-weight: 500;
     }
   }
 
@@ -97,20 +114,36 @@ button {
 
       svg {
         display: block;
-        width: 100%;
-        height: 100%;
       }
     }
   }
 
   &.btn-primary {
     color: $secondary;
+
+    .btn-label {
+      color: $primary;
+
+      &:before,
+      &:after {
+        color: $secondary;
+      }
+    }
+
     &:before {
       background-color: $primary;
     }
   }
 
   &.btn-outline-secondary {
+    .btn-label {
+      color: transparent;
+
+      &:before,
+      &:after {
+        color: $secondary;
+      }
+    }
     &:before {
       border: 1px solid $secondary;
     }
@@ -118,11 +151,20 @@ button {
 
   &:hover {
     &:before {
-      transform: scale(1.1);
+      transform: scale(1.08);
     }
-    .btn-label,
+
     .btn-arrow-inner {
-      transform: translateY(-100%);
+      transform: rotate(-45deg);
+    }
+
+    .btn-label {
+      &:before {
+        opacity: 0;
+      }
+      &:after {
+        opacity: 1;
+      }
     }
   }
 
