--- a/src/scss/sections/_block-case-video.scss
+++ b/src/scss/sections/_block-case-video.scss
@@ -1,23 +1,42 @@
 .block-case-video {
   aspect-ratio: 9/16;
+  position: relative;
 
-  video {
+  .video-wrapper {
+    width: 100%;
+    height: 100%;
+  }
+
+  video,
+  & > img {
     @include img-fit;
+  }
+
+  .overlay {
+    position: absolute;
+    left: 0;
+    bottom: 64px;
+    width: 100%;
+    text-align: right;
+
+    .video-controls {
+      display: inline-flex;
+    }
   }
 
   @include media-breakpoint-up(md) {
     aspect-ratio: 16/9;
   }
 
-  // @include media-breakpoint-up(lg) {
-  //   height: 750px;
-  // }
+  @include media-breakpoint-up(xl) {
+    .overlay {
+      bottom: 56px;
+    }
+  }
 
-  // @include media-breakpoint-up(xl) {
-  //   height: 900px;
-  // }
-
-  // @include media-breakpoint-up(xxl) {
-  //   height: 100vh;
-  // }
+  @include media-breakpoint-up(xxl) {
+    .overlay {
+      bottom: 128px;
+    }
+  }
 }
