--- a/src/scss/sections/_block-cases-slider.scss
+++ b/src/scss/sections/_block-cases-slider.scss
@@ -84,8 +84,8 @@
 
   .swiper-outer {
     height: 100vh;
-    max-height: 747px;
-    transform: translateY(-20%);
+    min-height: 747px;
+    // transform: translateY(-20%);
 
     .swiper-slide {
       background-size: cover;
@@ -118,6 +118,7 @@
 
         .line {
           overflow: hidden;
+
           .word {
             opacity: 0;
             transform: translateY(100%);
@@ -140,7 +141,7 @@
   .swiper-inner {
     width: 100%;
     height: 100%;
-    transform: translateY(-30%);
+    // transform: translateY(-30%);
 
     figure {
       width: 100%;
@@ -165,7 +166,7 @@
     }
 
     .swiper-outer {
-      max-height: none;
+      min-height: 0;
 
       .item {
         height: 100%;
