--- a/src/scss/sections/_block-filter.scss
+++ b/src/scss/sections/_block-filter.scss
@@ -1,5 +1,9 @@
 .block-filter {
   .container-fluid {
+    overflow: auto;
+    border: 1px solid $gray-100;
+    border-width: 1px 0;
+
     @include media-breakpoint-down(md) {
       padding: 0;
     }
@@ -26,6 +30,7 @@
       border: none;
       border-radius: 0;
       white-space: nowrap;
+      color: $black;
     }
 
     .dropdown-menu {
@@ -99,13 +104,12 @@
   }
 
   form {
-    width: 100%;
-    overflow: auto;
-    border: 1px solid $gray-100;
-    border-width: 1px 0;
+    // border: 1px solid $gray-100;
+    // border-width: 1px 0;
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
+    justify-content: flex-end;
   }
 
   .filter-list {
@@ -151,6 +155,11 @@
 
   @include media-breakpoint-up(lg) {
     padding: 40px 0 40px;
+
+    .container-fluid {
+      border: none;
+      overflow: visible;
+    }
 
     form {
       flex-direction: row;
