--- a/src/scss/sections/_block-headline-text.scss
+++ b/src/scss/sections/_block-headline-text.scss
@@ -24,6 +24,7 @@
 
   p {
     margin: 0 0 25px;
+
     &:last-child {
       margin: 0;
     }
@@ -59,11 +60,14 @@
 
     @include media-breakpoint-down(md) {
       text-align: center;
+
       h1 {
         font-size: 46px;
         font-weight: 350;
         margin: 0 0 23px;
+        line-height: 1;
       }
+
       p {
         font-weight: 300;
       }
@@ -74,6 +78,7 @@
     h1 {
       margin: 0;
     }
+
     h3 {
       font-weight: 400;
       margin: 0;
@@ -86,6 +91,7 @@
           padding-right: 0;
         }
       }
+
       p {
         br {
           display: none;
@@ -142,6 +148,7 @@
   @include media-breakpoint-up(xxl) {
     &:first-child {
       padding: 206px 0 107px;
+
       p {
         color: $gray-300;
       }
