--- a/src/scss/sections/_block-home-2.scss
+++ b/src/scss/sections/_block-home-2.scss
@@ -1,9 +1,17 @@
 .block-home-2 {
-  height: 300vh;
+  // height: 400vh;
   position: relative;
+  height: auto !important;
+  margin: 0 0 -25vh;
 
-  video {
-    min-width: 100% !important;
-    min-height: 100% !important;
+  .rs-stickyscrollon {
+    rs-module-wrap {
+      height: 100vh !important;
+    }
+
+    rs-module {
+      height: 100vh !important;
+      max-height: 100vh !important;
+    }
   }
 }
