--- a/src/scss/sections/_block-home-4.scss
+++ b/src/scss/sections/_block-home-4.scss
@@ -24,6 +24,35 @@
     .btn {
       width: auto;
       flex-shrink: 0;
+
+      @include media-breakpoint-up(md) {
+        color: $primary;
+        background-color: transparent;
+
+        .btn-label {
+          color: transparent;
+
+          &:before,
+          &:after {
+            color: $primary;
+          }
+        }
+
+        &:before {
+          border: 1px solid $primary;
+          background-color: transparent;
+        }
+
+        .btn-arrow {
+          .btn-arrow-inner {
+            svg {
+              path {
+                fill: $primary;
+              }
+            }
+          }
+        }
+      }
     }
 
     .video-arrow {
@@ -35,51 +64,47 @@
     background-color: $primary;
     margin: 0 0 32px;
     border-radius: 0 0 4px 4px;
-
-    .card-image {
-      @include img-abs-container(38.1%);
-      padding-top: 0;
-      transition: padding-top 0.2s;
-    }
+    transition: all 0.2s;
+    cursor: pointer;
 
     .card-body {
-      height: 522px;
       display: flex;
       flex-direction: column;
       padding: 32px 24px;
       position: relative;
-
-      .card-icon {
-        position: absolute;
-        top: 32px;
-        right: 24px;
-        width: 120px;
-        height: 120px;
-
-        img {
-          @include img-fit;
-        }
-      }
+      height: 100%;
 
       .card-title {
         font-size: 1.5rem;
-        font-weight: 500;
+        font-weight: 300;
         line-height: 1.15;
         letter-spacing: -0.01em;
         text-transform: uppercase;
-        transform: rotate(90deg) translateY(-24px);
-        transform-origin: left top;
+        text-align: right;
+        margin: 0 0 15px;
+      }
 
-        @include media-breakpoint-down(md) {
-          font-weight: 350;
+      .card-icon {
+        width: auto;
+        height: 190px;
+        display: flex;
+        align-items: center;
+
+        img {
+          display: block;
+          max-height: 100%;
+          width: auto;
         }
       }
 
       .card-footer {
         margin-top: auto;
+        padding: 15px 0 0;
 
         p {
-          margin: 0 0 25px;
+          margin: 0 0 10px;
+          font-weight: 350;
+          line-height: 1.154;
 
           @include media-breakpoint-down(md) {
             font-weight: 300;
@@ -88,9 +113,9 @@
 
         strong {
           font-size: 0.75rem;
-          font-weight: 700;
+          font-weight: 500;
           line-height: 1.3;
-          letter-spacing: -0.01em;
+          letter-spacing: 0.01em;
           display: block;
           margin: 0 0 13px;
         }
@@ -106,9 +131,7 @@
     }
 
     &:hover {
-      .card-image {
-        padding-top: 38.1%;
-      }
+      background-color: $white;
     }
   }
 
@@ -118,7 +141,7 @@
 
     .circle {
       @include abs;
-      animation: rotateCircle 50s linear infinite forwards;
+      // animation: rotateCircle 50s linear infinite forwards;
 
       &:before,
       &:after {
@@ -165,6 +188,7 @@
       min-height: 100vh;
       width: auto;
       display: inline-flex;
+      align-items: flex-start;
       padding: 60px 0 60px 0;
 
       & > * {
@@ -175,35 +199,22 @@
     .slide1 {
       width: 53vw;
       padding: 0 24px;
-      margin: 0 22vw 0 0;
-
-      .video-arrow {
-        display: block;
-        position: absolute;
-        left: 40%;
-        width: 80%;
-        transform: translateY(-30%);
-        aspect-ratio: 2/1;
-        background-color: $secondary;
-
-        video {
-          @include img-fit;
-          mix-blend-mode: lighten;
-        }
-      }
+      margin: 0 10vw 0 0;
     }
 
     .slide2,
     .slide3,
-    .slide4 {
-      width: 548px;
-      padding: 0 60px 0 0;
-    }
-
+    .slide4,
     .slide5 {
-      width: 488px;
+      width: 400px;
+      padding: 0 40px 0 0;
       position: relative;
       z-index: 2;
+    }
+
+    .card-home {
+      margin: 0;
+      height: 100%;
     }
 
     .slide6 {
@@ -225,11 +236,11 @@
 
   @include media-breakpoint-up(xl) {
     .section-horizontal {
-      padding: 196px 0;
+      padding: 60px 0;
     }
 
     .slide1 {
-      margin: 0 17.7vw 0 11vw;
+      margin: 0 12vw 0 11vw;
 
       p {
         font-size: 2rem;
@@ -238,33 +249,25 @@
       }
     }
 
+    .slide2,
+    .slide3,
+    .slide4,
+    .slide5 {
+      width: 548px;
+      padding: 0 60px 0 0;
+    }
+
     .card-home {
-      background-color: $primary;
-      margin: 0 0 32px;
-      border-radius: 0 0 4px 4px;
+      margin: 0;
 
       .card-body {
-        height: 582px;
         padding: 43px 48px;
 
         .card-icon {
-          top: 48px;
-          right: 48px;
-          width: 148px;
-          height: 148px;
-        }
-
-        .card-title {
-          font-size: 2rem;
-          transform: rotate(90deg) translateY(-29px);
+          height: 150px;
         }
 
         .card-footer {
-          p {
-            margin: 0 0 44px;
-            line-height: 1.16;
-          }
-
           strong {
             font-size: 1rem;
             font-weight: 500;
@@ -299,11 +302,11 @@
 
   @include media-breakpoint-up(xxl) {
     .section-horizontal {
-      padding: 245px 0;
+      padding: 100px 0;
     }
 
     .slide1 {
-      margin: 0 19.6vw 0 8.3vw;
+      margin: 0 19.5vw 0 8.3vw;
       width: 56vw;
 
       p {
@@ -315,7 +318,8 @@
 
     .slide2,
     .slide3,
-    .slide4 {
+    .slide4,
+    .slide5 {
       width: 575px;
       padding: 0 87px 0 0;
     }
@@ -323,47 +327,21 @@
     .card-home {
       border-radius: 5px;
 
-      .card-image {
-        img {
-          border-radius: 5px 5px 0 0;
-        }
-      }
-
-      &:hover {
-        .card-image {
-          padding-top: 45.3%;
-        }
-      }
-
       .card-body {
-        height: 748px;
-        padding: 48px 55px 48px 48px;
-
-        .card-icon {
-          right: 55px;
-        }
+        padding: 44px 48px 48px;
 
         .card-title {
-          transform: rotate(90deg) translateY(-29px);
+          margin: 0 0 35px;
         }
 
+        .card-icon {
+          height: 190px;
+        }
         .card-footer {
+          padding: 31px 0 0;
           p {
-            margin: 0 0 44px;
-            line-height: 1.16;
-          }
-
-          strong {
-            font-size: 1rem;
-            font-weight: 500;
-            letter-spacing: 0;
-            margin: 0 0 13px;
-          }
-
-          .card-logo {
-            img {
-              height: 37px;
-            }
+            letter-spacing: 0.01em;
+            margin: 0 0 22px;
           }
         }
       }
@@ -383,6 +361,7 @@
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
