--- a/src/scss/sections/_block-text-page.scss
+++ b/src/scss/sections/_block-text-page.scss
@@ -22,6 +22,23 @@
 
   p {
     margin: 0 0 30px;
+    text-align: justify;
+
+    a {
+      text-decoration: none;
+      border-bottom: 1px solid;
+      margin: -1px 0;
+    }
+
+    &.animated {
+      a {
+        margin: 0;
+      }
+    }
+  }
+
+  li {
+    text-align: justify;
 
     a {
       text-decoration: none;
