--- a/src/scss/sections/_footer.scss
+++ b/src/scss/sections/_footer.scss
@@ -7,6 +7,11 @@
   overflow: hidden;
   font-size: 0.875rem;
   line-height: 1.48;
+  opacity: 0;
+
+  &.is-active {
+    opacity: 1;
+  }
 
   .footer-headline {
     font-weight: 800;
@@ -44,6 +49,8 @@
   }
 
   @include media-breakpoint-up(md) {
+    opacity: 1;
+
     .footer-icon {
       padding: 15px 0 39px;
 
@@ -114,6 +121,7 @@
       font-size: 16.65vw;
       transform: translateY(-9%);
     }
+
     .footer-icon {
       padding: 0 0 128px;
       margin: -8px 0 0;
