--- a/src/scss/base/_general.scss
+++ b/src/scss/base/_general.scss
@@ -60,8 +60,9 @@ a {
 .lds-dual-ring {
   margin: auto;
 
-  & > * {
-    display: none;
+  &:before,
+  &:after {
+    display: none !important;
   }
 
   #loader {
