--- a/src/scss/sections/sections.scss
+++ b/src/scss/sections/sections.scss
@@ -52,3 +52,7 @@
 @import "block-headline-text-case";
 
 @import "block-text-page";
+
+@import "block-video-slider";
+@import "block-cards-slider";
+@import "block-slogan";
