--- a/src/scss/sections/_block-cases-carousel.scss
+++ b/src/scss/sections/_block-cases-carousel.scss
@@ -1,51 +1,123 @@
-.block-cases-carousel {
-  padding: 0 1.5rem 30px;
+.block-cards-slider-cases {
+  padding: 58px 0 62px;
+  width: 100%;
+  overflow: hidden;
 
-  .slide {
+  .cards-slider-text {
     margin: 0 0 32px;
+
+    h2 {
+      font-size: 36px;
+      line-height: 1;
+      font-weight: 400;
+    }
+
+    .cards-slider-controls {
+      display: none;
+    }
+  }
+
+  .swiper {
+    margin: 0 -24px 0 0;
+
+    .swiper-slide {
+      height: auto;
+    }
+  }
+
+  .swiper-pagination-progressbar {
+    width: 120px;
+    height: 2px;
+    background-color: rgba($secondary, 0.2);
+    position: relative;
+    border-radius: 2px;
+    margin: 38px 0 0;
+
+    .swiper-pagination-progressbar-fill {
+      background: $secondary;
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      transform: scale(0);
+      transform-origin: left top;
+      border-radius: 2px;
+    }
+  }
+
+  @include media-breakpoint-down(lg) {
   }
 
   @include media-breakpoint-up(md) {
-    .wrapper {
-      width: auto;
-      display: inline-flex;
-      padding: 50px 20% 0 0;
+    .container-fluid {
+      display: flex;
+      padding: 0 50px;
+    }
 
-      & > * {
-        flex-shrink: 0;
+    .swiper {
+      margin: 0 -50px 0 0;
+    }
+
+    .swiper-pagination-progressbar {
+      display: none;
+    }
+
+    .cards-slider-text {
+      margin: 0;
+      width: 36.4%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+
+      .cards-slider-controls {
+        display: flex;
+
+        .swiper-button-prev {
+          margin: 0 20px 0 0;
+        }
       }
     }
 
-    .slide {
-      width: 400px;
-      margin: 0 24px 0 0;
+    .cards-slider {
+      width: 63.6%;
     }
   }
 
+  @include media-breakpoint-up(lg) {
+  }
+
   @include media-breakpoint-up(xl) {
-    padding: 0 0 66px;
+    padding: 96px 0;
 
-    .wrapper {
-      padding: 0 10.14vw;
-    }
-
-    .slide {
-      width: 504px;
-      margin: 0 24px 0 0;
-
-      &:nth-child(2) {
-        .card-case .card-main .card-title {
-          word-spacing: 700px;
-        }
+    .cards-slider-text {
+      h2 {
+        font-size: 56px;
+        font-weight: 400;
+        line-height: 50.4px;
       }
     }
   }
 
   @include media-breakpoint-up(xxl) {
-    padding: 0 0 58px;
+    padding: 160px 0;
 
-    .wrapper {
-      padding: 0 9.375vw;
+    .cards-slider-text {
+      width: 36.2%;
+      padding-left: 7%;
+
+      h2 {
+        font-size: 68px;
+        line-height: 1;
+      }
+    }
+
+    .cards-slider {
+      width: 63.8%;
+    }
+
+    .cards-slider-controls {
+      padding: 0 0 47px;
     }
   }
 }
