--- a/src/scss/sections/_block-testimonials.scss
+++ b/src/scss/sections/_block-testimonials.scss
@@ -197,7 +197,7 @@
           &:before {
             position: absolute;
             left: -43px;
-            top: 0;
+            top: -2px;
           }
 
           p {
