--- a/src/scss/sections/_header.scss
+++ b/src/scss/sections/_header.scss
@@ -38,10 +38,16 @@
   .btn-primary {
     @include media-breakpoint-down(lg) {
       background-color: $secondary;
-      color: $primary;
 
       &:before {
         display: none;
+      }
+
+      .btn-label {
+        &:before,
+        &:after {
+          color: $primary;
+        }
       }
     }
   }
