--- a/src/scss/components/_card-case.scss
+++ b/src/scss/components/_card-case.scss
@@ -1,28 +1,32 @@
 .card-case {
-  border-radius: 4px;
+  border-radius: 5px;
   overflow: hidden;
   background-color: $gray-100;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  transition: all 0.25s;
 
   .card-image {
     overflow: hidden;
-    border-radius: 4px 4px 0px 0px;
+    border-radius: 5px 5px 0px 0px;
+    flex: 0 0 auto;
 
     .img-fade {
-      @include img-abs-container(0%);
+      @include img-abs-container(53.8%);
     }
 
     img {
-      border-radius: 4px 4px 0px 0px;
+      border-radius: 5px 5px 0px 0px;
     }
   }
 
   .card-main {
-    height: 452px;
+    height: 100%;
+    padding: 32px 24px;
+    border-radius: 0 0 5px 5px;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
-    padding: 32px 24px;
-    border-radius: 0 0 4px 4px;
 
     .card-logo {
       text-align: right;
@@ -43,7 +47,7 @@
       font-weight: 400;
       line-height: 1.15;
       letter-spacing: -0.01em;
-      margin: 0 0 19px;
+      margin: auto 0 19px;
       text-decoration: none;
     }
 
@@ -59,33 +63,12 @@
     }
   }
 
-  &--featured {
+  &:hover {
     background-color: $primary;
   }
 
   @include media-breakpoint-up(md) {
-    border-radius: 8px 8px 0 0;
-    height: 662px;
-    background-color: transparent;
-
-    .card-image {
-      border-radius: 8px 8px 0 0;
-
-      .img-fade {
-        padding-top: 0;
-        height: 0;
-        transition: height 0.5s;
-      }
-
-      img {
-        border-radius: 8px 8px 0 0;
-      }
-    }
-
     .card-main {
-      background-color: $gray-100;
-      transition: background-color 0.5s;
-
       .card-logo {
         width: auto;
         height: auto;
@@ -96,31 +79,16 @@
         }
       }
     }
-
-    &:hover {
-      .card-image {
-        .img-fade {
-          height: 210px;
-        }
-      }
-
-      .card-main {
-        background-color: $primary;
-      }
-    }
   }
 
   @include media-breakpoint-up(xl) {
-    height: 710px;
-
     .card-main {
-      height: 500px;
       padding: 32px;
 
       .card-title {
         font-size: 46px;
         line-height: 1.06;
-        margin: 0 0 32px;
+        margin: auto 0 32px;
       }
 
       p {
@@ -133,20 +101,5 @@
   }
 
   @include media-breakpoint-up(xxl) {
-    height: 873px;
-
-    .card-main {
-      height: 602px;
-    }
-
-    &:hover {
-      background-color: $primary;
-
-      .card-image {
-        .img-fade {
-          height: 271px;
-        }
-      }
-    }
   }
 }
