--- a/src/scss/sections/_block-scroll-list.scss
+++ b/src/scss/sections/_block-scroll-list.scss
@@ -80,20 +80,35 @@
       }
     }
 
-    ul {
-      li {
-        display: flex;
-        align-items: flex-end;
-        justify-content: space-between;
-        padding: 30px 0;
-        margin: 0 0 30px;
+    .scroller {
+      ul {
+        li {
+          display: flex;
+          align-items: flex-end;
+          justify-content: space-between;
+          padding: 30px 0;
+          margin: 0 0 30px;
 
-        .headline {
-          margin: 0;
+          .headline {
+            margin: 0;
+          }
+
+          .text {
+            text-align: right;
+            padding-bottom: 15px;
+          }
         }
+      }
+    }
+  }
 
-        .text {
-          text-align: right;
+  @include media-breakpoint-up(lg) {
+    .scroller {
+      ul {
+        li {
+          .text {
+            padding-bottom: 19px;
+          }
         }
       }
     }
@@ -119,7 +134,7 @@
           }
 
           .text {
-            padding: 0;
+            padding: 0 0 12px;
 
             p {
               margin: 0;
@@ -151,7 +166,7 @@
           margin: 0 0 43px;
 
           .text {
-            padding: 0 0 11px;
+            padding: 0 0 25px;
             font-weight: 400;
 
             p {
